Corrected some typos

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -151,7 +151,7 @@ This allows us to randomly split the dataset into training and test sets that do
 T as our two data sources. 
 
 The test set will be a part of the model building process that will only be used at the end of it. 
-The idea is that it will not take part in building the machine learning model and will be used only to evaluate its performance, as a simulated qualification of the algorithm's performance with \texit{new} samples.
+The idea is that it will not take part in building the machine learning model and will be used only to evaluate its performance, as a simulated qualification of the algorithm's performance with \textit{new} samples.
 This makes sense knowing that the objective is to build a probabilistic model which has the capacity to correctly predict the class instances of new data objects, such as those from $\mathcal{T_s}$, based on having seen information of objects from $\mathcal{T}$.
 
 As an example, let's consider a reduced training dataset built from Call Detail Records (CDRs) where samples are calls being made by users who can belong to any of the following provinces: \textit{Buenos Aires}, \textit{Cordoba} and \textit{Santa Fe}.
