--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -232,9 +232,9 @@ The best features can be broken down into the following categories.
     We make the reminder here that these measurments were the basis of our construction of the heatmaps in that same chapter.
     Where the antennas plotted concentrated users with vulnerable calls by calling volume or time, for a given month.
 
-    \item Mobility size: Finally, diffrent measures of the distance in human mobility were
+    \item Mobility size: Finally, different measures of the distance in human mobility were
 determined to be important by the model.
-Both general mobility diameters and weekday or weeknight specific mobility endemic were relevant.
+Both general mobility diameters and weekday or weeknight specific mobility endemic were relevant.
 
 \end{itemize}
 
