--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -58,9 +58,10 @@ For each case, we will show the results of these applications.
 
 We close with a summary of results and conclusions in \cref{ch:results_conclusion}, where different key information is presented, along with possible lines of future work.
 
+
 \section{Mobile Phone Records, Mobility and Epidemiology}
 
-The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of\cite{naboulsi2015mobile}. Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see\cite{netmob}).
+The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of \cite{naboulsi2015mobile}. Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see \cite{netmob}).
 
 Mobile traffic contains information about the movement, interactions, and mobile service consumption of individuals at unprecedented scales.
 This attracted scientists from multiple disciplines:
@@ -72,20 +73,20 @@ Thanks to the growing availability of datasets, collaborations between academic 
 One of the main research subject is mobility analysis.
 Call locations (recorded through cell tower usages) are a projection of users trajectories,
 showing a strong regularity in their movement patterns,
-both in space and time, as described in\cite{gonzalez2008understanding}.
-In another study,\cite{song2010limits} explore the limits of predictability in human dynamics by studying the mobility patterns of anonymized mobile phone users.
+both in space and time, as described in \cite{gonzalez2008understanding}.
+In another study, \cite{song2010limits} explore the limits of predictability in human dynamics by studying the mobility patterns of anonymized mobile phone users.
 By measuring the entropy of individuals trajectories, the authors found a 93\% potential predictability in user mobility across the whole user base.
 
-Human mobility is also influenced by social components:\cite{cho2011friendship} observe that social relationships
+Human mobility is also influenced by social components: \cite{cho2011friendship} observe that social relationships
 can explain about 10\% to 30\% of all human movement, while periodic
-behavior explains 50\% to 70\%; whereas\cite{ponieman2016mobility} show how social ties can be used to improve mobility predictions, in the case of attendance to large social events.
+behavior explains 50\% to 70\%; whereas \cite{ponieman2016mobility} show how social ties can be used to improve mobility predictions, in the case of attendance to large social events.
 
-Mobility analysis has applications in diverse areas such as urban planning (see\cite{wang2012understanding})  and disaster recovery (see\cite{lu2012predictability}).
+Mobility analysis has applications in diverse areas such as urban planning (see \cite{wang2012understanding})  and disaster recovery (see \cite{lu2012predictability}).
 In particular, mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases, while preserving the privacy of users.
 
-They have been used to understand the diffusion of malaria in Kenya by\cite{wesolowski2012quantifying} and in Ivory Coast by\cite{enns2013human}, including the refining of infection models performed by\cite{chunara2013large}. The cited works on Ivory Coast were performed using the Data for Development (\cite{d4d}) challenge datasets released in 2013.\cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
+They have been used to understand the diffusion of malaria in Kenya by \cite{wesolowski2012quantifying} and in Ivory Coast by \cite{enns2013human}, including the refining of infection models performed by \cite{chunara2013large}. The cited works on Ivory Coast were performed using the Data for Development (\cite{d4d}) challenge datasets released in 2013. \cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
 
-Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics by\cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in\cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
+Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics by \cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in \cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
 
 
 \todo{add more references to what is out of scope in this work}
@@ -94,7 +95,7 @@ Mobile phone data has also been used to predict the geographic spread and timing
 
 Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization. At the present time, it has a wide range of applications. A non-comprehensive list of its use includes self-driving cars, spam detection systems, face recognition, voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
-``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E'' (definition given by\cite{Mitchell-MLearning}). For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learn} to do a specific task better over time and with more data. Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
+``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E'' (definition given by \cite{Mitchell-MLearning}). For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learn} to do a specific task better over time and with more data. Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
 
  In this work we generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. %A discussion of how mobile data was processed is included.
 This is the first work that leverages mobile phone data to better understand the diffusion of the Chagas disease.
@@ -138,7 +139,7 @@ Even though governmental programs have been ongoing for years now~\cite{plan_nac
 
 
 
-In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico~\cite{cruz2006chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in \cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
+In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico (\cite{cruz2006chagmex}). Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in \cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
 This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:results_conclusion}.
 
 \begin{figure}[ht]
@@ -163,29 +164,28 @@ According to~\cite{dumonteil1999update},
 there are a total of 18 endemic areas in Mexico, located in the southeast, and
 these areas include the states of Oaxaca, Jalisco, Yucatán, Chiapas, Veracruz,
 Puebla, Guerrero, Hidalgo, and Morelos, all of them with rural areas.
-Chiapas, Oaxaca, Puebla, Veracruz and Yucatán are among the most affected states (where the prevalence may exceed 10\%), although cases have been reported in most areas of the country
-~\cite{cruz2006chagmex,dumonteil1999update}.
+Chiapas, Oaxaca, Puebla, Veracruz and Yucatán are among the most affected states (where the prevalence may exceed 10\%), although cases have been reported in most areas of the country (\cite{cruz2006chagmex,dumonteil1999update}).
 Despite the lack of official reports, an estimate of the number of \textit{Trypanosoma cruzi} infections by state in the country
 indicates that the number of potentially
-affected people in Mexico is about 5.5 million~\cite{carabarin2013chagas}.
+affected people in Mexico is about 5.5 million (see~\cite{carabarin2013chagas}).
 Mexico, together with Bolivia, Colombia, and Central
 America, are among the countries most affected by this
-\textit{neglected tropical disease} (NTD)~\cite{hotez2013innovation}.
+\textit{neglected tropical disease} (NTD), as reported by~\cite{hotez2013innovation}.
 The disease doesn't know about borders:
-Chagas and other neglected tropical diseases present in the north of Mexico remain highly endemic in the south of Texas as well~\cite{hotez2012texas}.
+Chagas and other neglected tropical diseases present in the north of Mexico remain highly endemic in the south of Texas as well (\cite{hotez2012texas}).
 
 In recent years there has been a focus on treating the disease with two available
 medications, benznidazole or nifurtimox. A study
 that explores the access to these two drugs in Mexico
 shows that less than 0.5\% of those who are infected with
-the disease received treatment in Mexico in years~\cite{manne2013barriers}.
+the disease received treatment in Mexico in years (\cite{manne2013barriers}).
 
 
 People from endemic areas of Chagas disease tend to migrate to industrialized cities of the country, mainly Mexico City, in search of jobs.
-In accordance with this movement, a report showed
+In accordance with this movement, \cite{guzman2001epidemiology} showed
 that infected children under 5 year of age are frequently distributed in urban
 rather than in rural areas, indicating that the disease is becoming urbanized in
-Mexico~\cite{guzman2001epidemiology}.
+Mexico.
 Therefore, as in the Argentinian case, the study of long-term mobility is crucial to understand the spread of the Chagas disease in Mexico.
 
 
